# bitsplain

./: Cargo.toml  justfile
bitsplain/: Cargo.toml  README.md
bitsplain-bin/: Cargo.toml
bitsplain-bin/src/cli/: ctx.rs  main.rs  pretty.rs
bitsplain-bin/src/gtk/: app.rs  main.rs
bitsplain-bin/src/gtk/comp/: doc.rs  hexy.rs  mod.rs  tree.rs
bitsplain-bin/src/gtk/hexy/: imp.rs
bitsplain-bin/src/gtk/rich_label/: imp.rs  mod.rs
bitsplain-bin/src/gtk/tag/: imp.rs  mod.rs
bitsplain-btc/: Cargo.toml
bitsplain-btc/src/: bip47.rs  block.rs  datatypes.rs  tx.rs
bitsplain-cli/: Cargo.toml
bitsplain-cli/src/: main.rs  pretty.rs  settings.rs
bitsplain-core/: Cargo.toml
bitsplain-core/src/: ann.rs  annotations.rs  datatypes.rs  lib.rs  lines.rs  parse.rs
bitsplain-gtk/: Cargo.toml
bitsplain-gtk/src/: app.rs  x.css
bitsplain-gtk/src/comp/: doc.rs  hexy.rs  tree.rs
bitsplain-gtk/src/hexy/: mod.rs
bitsplain-gtk/src/rich_label/: imp.rs  mod.rs
bitsplain-lib/: Cargo.toml
bitsplain-lib/src/: lib.rs
bitsplain-ln/: Cargo.toml
bitsplain-ln/src/: bolt12.rs  gossip.rs  lib.rs
bitsplain/src/: ann.rs  basic.rs  binary.rs  datatypes.rs  decode.rs  dsl.rs  lib.rs  lines.rs  mod.rs  parse.rs  tree.rs  types.rs  value.rs
bitsplain/src/btc/: bip47.rs  block.rs  datatypes.rs  mod.rs  tx.rs
bitsplain/src/ln/: bolt12.rs  gossip.rs  mod.rs
config/bitsplain/: config.toml
crates/bitsplain/: Cargo.toml
crates/bitsplain-bin/: Cargo.toml  README.md
crates/bitsplain-bin/src/cli/: args.rs  main.rs
crates/bitsplain-bin/src/cli/format/: mod.rs
crates/bitsplain-bin/src/cli/format/pretty/: mod.rs
crates/bitsplain-bin/src/cli/format/svg/: legend.rs  mod.rs
crates/bitsplain-bin/src/gtk/: app.rs  main.rs
crates/bitsplain-bin/src/gtk/comp/: doc.rs  hexy.rs  tree.rs
crates/bitsplain-bin/src/gtk/hexy/: hexy.css  imp.rs  mod.rs
crates/bitsplain-bin/src/gtk/rich_label/: imp.rs  mod.rs
crates/bitsplain-bin/src/gtk/tag/: imp.rs  mod.rs  tag.css
crates/bitsplain-format/: Cargo.toml
crates/bitsplain-format-html/: Cargo.toml
crates/bitsplain-format-html/src/: background.base64  lib.rs
crates/bitsplain-format-image/: Cargo.toml
crates/bitsplain-format-image/src/: lib.rs
crates/bitsplain-format/src/: ctx.rs  error.rs  lib.rs  settings.rs
crates/bitsplain/src/: binary.rs  decode.rs  dsl.rs  lib.rs  parse.rs  tree.rs  types.rs  value.rs
crates/bitsplain/src/btc/: bip47.rs  block.rs  datatypes.rs  tx.rs
crates/bitsplain/src/ln/: bolt12.rs  gossip.rs  mod.rs
crates/bitsplain/src/output/: hexblock.rs  mod.rs  xml.rs
