[package]
name = "bitsplain-bin"
version = "0.1.0-alpha.1"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://jirijakes.com/code/bitsplain"
description = "User interfaces for bitsplain, library explaining Bitcoin-related binary data"
keywords = ["bitcoin", "binary", "parsing", "GUI", "CLI"]

[dependencies]
bitsplain = { version = "0.1.0-alpha.1", path = "../bitsplain" }
clap = { version = "4.1.1", features = ["derive"] }
config = "0.13.3"
dirs = "4.0.0"
gtk = { package = "gtk4", version = "0.5.5" }
hex = "0.4.3"
human-size = "0.4.2"
lazy_static = "1.4.0"
pretty = { version = "0.11.3", features = ["termcolor"] }
print_bytes = "1.1.0"
relm4 = "0.5.0-rc.1"
serde = { version = "1.0.152", features = ["derive"] }
termion = "2.0.1"
time = { version = "0.3.17", features = ["formatting"] }

[[bin]]
name = "bitsplain"
path = "src/cli/main.rs"

[[bin]]
name = "bitsplain-gtk"
path = "src/gtk/main.rs"
