[package]
name = "bitsplain-gtk"
version = "0.1.0-alpha.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitsplain-lib = { path = "../bitsplain-lib" }
gtk = { package = "gtk4", version = "0.5.5" }
hex = "0.4.3"
lazy_static = "1.4.0"
relm4 = "0.5.0-rc.1"
