[package]
name = "bitsplain-lib"
version = "0.1.0-alpha.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitsplain-btc = { version = "0.1.0-alpha.1", path = "../bitsplain-btc" }
bitsplain-core = { version = "0.1.0-alpha.1", path = "../bitsplain-core" }
bitsplain-ln = { version = "0.1.0-alpha.1", path = "../bitsplain-ln" }
inventory = "0.3.3"
