[package]
name = "bitsplain"
version = "0.1.0-alpha.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
bech32 = "0.9.1"
bitcoin = "0.29.2"
hex = "0.4.3"
inventory = "0.3.3"
lightning = "0.0.113"
nom = "7.1.3"
rust_decimal = "1.27.0"
time = { version = "0.3.17", features = ["formatting"] }
