[package]
name = "bitsplain"
version = "0.1.0-alpha.1"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://jirijakes.com/code/bitsplain"
description = "Bitsplain helps understand Bitcoin-related binary data"
keywords = ["bitcoin", "binary", "parsing"]

[dependencies]
base64 = "0.21.0"
bech32 = "0.9.1"
bitcoin = "0.29.2"
bytes = "1.3.0"
hex = "0.4.3"
inventory = "0.3.3"
lightning = "0.0.113"
nom = "7.1.3"
rust_decimal = "1.27.0"
time = { version = "0.3.17", features = ["formatting"] }
