[package]
name = "bitsplain_format_html"
version = "0.1.0-alpha.2"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://jirijakes.com/code/bitsplain"
description = "HTML output format for bitsplain, library explaining Bitcoin-related binary data"
keywords = ["bitcoin", "binary", "parsing", "HTML"]

[dependencies]
bitsplain = { version = "0.1.0-alpha.2", path = "../bitsplain" }
bitsplain_format = { version = "0.1.0-alpha.2", path = "../bitsplain-format" }
colors-transform = "0.2.11"
lazy_static = "1.5.0"
