[package]
name = "bitsplain_format_image"
version = "0.1.0-alpha.2"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://jirijakes.com/code/bitsplain"
description = "Image output format for bitsplain, library explaining Bitcoin-related binary data"
keywords = ["bitcoin", "binary", "parsing", "image"]

[dependencies]
bitsplain = { version = "0.1.0-alpha.2", path = "../bitsplain" }
bitsplain_format = { version = "0.1.0-alpha.2", path = "../bitsplain-format" }
bitsplain_format_html = { version = "0.1.0-alpha.2", path = "../bitsplain-format-html" }
wkhtmlapp = { git = "https://github.com/jirijakes/wkhtmlapp", branch = "capture-stdout" }
