[package]
name = "bitsplain"
version = "0.1.0-alpha.2"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://jirijakes.com/code/bitsplain"
description = "Bitsplain helps understand Bitcoin-related binary data"
keywords = ["bitcoin", "binary", "parsing"]

[dependencies]
base64 = "0.21.5"
bech32 = "0.9.1"
bitcoin = "0.31.0"
bytes = "1.5.0"
hex = "0.4.3"
inventory = "0.3.13"
lightning = "0.0.118"
nom = "7.1.3"
num-bigint = "0.4.4"
rust_decimal = "1.33.1"
time = { version = "0.3.30", features = ["formatting"] }
xml-builder = "0.5.2"
