[package]
name = "bitsplain"
version = "0.1.0-alpha.2"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://jirijakes.com/code/bitsplain"
description = "Bitsplain helps understand Bitcoin-related binary data"
keywords = ["bitcoin", "binary", "parsing"]

[dependencies]
base64 = "0.21"
bech32 = "0.9"
bitcoin = "0.31"
bytes = "1.6"
hex = "0.4"
inventory = "0.3"
lightning = { git = "https://github.com/lightningdevkit/rust-lightning" }
nom = "7.1"
num-bigint = "0.4"
rust_decimal = "1.35"
time = { version = "0.3", features = ["formatting"] }
xml-builder = "0.5"
